fix bug on IOS close dropdown when click outside

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -13,6 +13,7 @@
         background-color: rgba($black, 0.86);
         z-index: 10;
         transition: opacity $speed-slow $easing;
+        cursor: pointer;
     }
     .box {
         position: absolute;
